--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet publish src/EPTabletopApp.Blazor/EPTabletopApp.Blazor.csproj -c Release -o release --nologo
     
     # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
+    - name: Change base-tag in index.html from / to EPTabletopApp
       run: sed -i 's/<base href="\/" \/>/<base href="\/EPTabletopApp\/" \/>/g' release/wwwroot/index.html
       
     # Add 404 handler
