Fixed namespaces in _imports

--- a/src/EPTabletopApp/Properties/launchSettings.json
+++ b/src/EPTabletopApp/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "EpTabletopApp": {
+    "EPTabletopApp": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
