--- a/src/EPTabletopApp/wwwroot/manifest.json
+++ b/src/EPTabletopApp/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "EpTabletopApp",
-  "short_name": "EpTabletopApp",
+  "name": "EPTabletopApp",
+  "short_name": "EPTabletopApp",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
